cambios en header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,21 @@
   <title>Document</title>
 </head>
 <body>
-  Prueba conociemientos
+  <header>
+    <nav>
+      <a href="">Home</a>
+      <a href="">Profile</a>
+      <a href="">3</a>
+      <a href="">4</a>
+    </nav>
+
+  </header>
+  <section>
+      cuerpo de la pagina
+      Prueba conociemientos
+    </section>
+    <footer>
+      hola
+    </footer>
 </body>
 </html>
