cambioss en form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
   <header>
     <nav>
@@ -17,11 +19,33 @@
 
   </header>
   <section>
-      cuerpo de la pagina
-      Prueba conociemientos
-    </section>
-    <footer>
-      hola
-    </footer>
+    formulario reactivo
+    <!-- <label for="">ID</label>
+    <input type="text"></input>
+    <label for="">Nombre del producto</label>
+    <input type="text"></input>
+    <label for="">Características </label>
+    <input type="text"></input>
+    <label for="">Fecha de lanzamiento </label>
+    <input type="text"></input>
+    <label for="">Correo fabricante </label>
+    <input type="text"></input>
+    <label for="">País de fabricación </label>
+    <input type="text"></input>
+    <label for="">Precio en formato de moneda </label>
+    <input type="text"></input>
+    <label for="">Unidades disponibles </label>
+    <input type="text"></input>
+    <label for="">Unidades vendidas </label>
+    <input type="text"></input>
+    <label for="">Imagen del pproducto </label>
+    <input type="text"></input> -->
+    <button>Guardar</button>
+    <button>Cerrar</button>
+  </section>
+  <footer>
+    hola
+  </footer>
 </body>
+
 </html>
