cambios en form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,3 +45,27 @@
         </div>
     </p-footer>
 </p-dialog>
+
+<!-- ID  
+
+Nombre del Producto  
+
+Características (campo tipo texto)  
+
+Fecha de lanzamiento  
+
+Correo fabricante  
+
+País de fabricación  
+
+Usar el siguiente servicio (https://restcountries.eu/#api-endpoints-response-example ) u otro en desde internet  
+
+  
+
+Precio en formato de moneda  
+
+Unidades disponibles  
+
+Unidades vendidas  
+
+Imagen del producto   -->
