--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-menu></app-menu>
 
+<div >
+    <h2>{{ name }}</h2>
+    <p>{{ alpha2Code }}</p>
+</div>
 <p-table
   [columns]="cols"
   [value]="cars"
