--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,7 @@
 <p-menubar [model]="items">
+  <img
+    src="https://trello-members.s3.amazonaws.com/5d9cce6df16a1803570b31ce/3072bb166fbb39cab888c79c9badc86b/original.png"
+    alt="">
   <input type="text" pInputText placeholder="Buscar" />
   <button pButton label="Cerrar sesión" icon="fa fa-sign-out"></button>
 </p-menubar>
