--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,19 +31,13 @@
       <tr>
         <th *ngFor="let col of columns" [ngSwitch]="col.field">
           <input *ngSwitchCase="'vin'" pInputText type="text"
-            (input)="tt.filter($event.target.value, col.field, col.filterMatchMode)">
-          <!-- <div *ngSwitchCase="'year'">
-            {{yearFilter}}
-            <i class="pi pi-times" (click)="yearFilter=null;tt.filter(null, col.field, col.filterMatchMode)"></i>
-            <p-slider [style]="{'width':'100%','margin-top':'8px'}" [(ngModel)]="yearFilter" [min]="1970" [max]="2010"
-              (onChange)="onYearChange($event, dt)"></p-slider>
-          </div>
-          <p-dropdown *ngSwitchCase="'brand'" [options]="brands" [style]="{'width':'100%'}"
-            (onChange)="tt.filter($event.value, col.field, 'equals')"></p-dropdown>
-          <p-multiSelect *ngSwitchCase="'color'" [options]="colors" defaultLabel="All Colors"
-            (onChange)="tt.filter($event.value, col.field, 'in')"></p-multiSelect> -->
+            (input)="tt.filter($event.target.value, col.field, col.filterMatchMode)" placeholder="Buscar por Id">
+
+          <input *ngSwitchCase="'year'" pInputText type="text"
+            (input)="tt.filter($event.target.value, col.field, col.filterMatchMode)" placeholder="Buscar por Nombre">
         </th>
       </tr>
+
     </ng-template>
     <ng-template pTemplate="body" let-rowData let-columns="columns">
       <tr [pSelectableRow]="rowData">
