--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,11 @@
 
   <p-table #tt [columns]="cols" [value]="cars" selectionMode="single" [(selection)]="selectedCar"
     (onRowSelect)="onRowSelect($event)" [paginator]="true" rows="10">
-    <ng-template pTemplate="caption">
+    <!-- <ng-template pTemplate="caption">
       <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
       <input type="text" pInputText size="50" placeholder="Global Filter"
         (input)="tt.filterGlobal($event.target.value, 'contains')" style="width:auto">
-    </ng-template>
+    </ng-template> -->
     <ng-template pTemplate="header" let-columns>
       <tr>
         <th *ngFor="let col of columns" [pSortableColumn]="col.field">
